--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
   },
   "homepage": "https://github.com/HenriqueSilva254/MyWallet-Backend#readme",
   "dependencies": {
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.9",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "mongodb": "^5.6.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "uuid": "^9.0.0"
   }
 }
